update publish intermediate files

--- a/qc/qc.config
+++ b/qc/qc.config
@@ -19,7 +19,7 @@ params {
 
 
     // output files
-    debug_preproc_output = false // publish intermediate files 
+    publish_trimmomatic_reads = false // publish intermediate files 
     publish_clean_reads = true
 
     // -- scripts --//
