update adapter_fasta pathway with RVI adapters fasta

--- a/qc/qc.config
+++ b/qc/qc.config
@@ -4,7 +4,7 @@ params {
 
     // -- trimmomatic --//
     run_trimmomatic = true
-    adapter_fasta = null
+    adapter_fasta = "/lustre/scratch126/gsu/rvidata/pipeline_resources/files/solexa-with-nextseqPR-adapters.fasta"
     trimmomatic_options = "ILLUMINACLIP:${params.adapter_fasta}:2:10:7:1 CROP:151 SLIDINGWINDOW:4:20 MINLEN:70"
 
     // -- TRF --//
