--- a/preprocessing/preprocessing.config
+++ b/preprocessing/preprocessing.config
@@ -13,7 +13,7 @@ params {
     trf_cli_options= '2 7 7 80 10 50 500 -h -ngs' //"2 5 7 80 10 50 2000 -h -ngs"
 
     // -- bmtagger --//
-    run_bmtagger = true
+    run_bmtagger = false
     bmtagger_db = "/data/pam/software/bmtagger"
     bmtagger_host = "T2T-CHM13v2.0"
     publish_host_reads = false
