--- a/preprocessing/preprocessing.config
+++ b/preprocessing/preprocessing.config
@@ -20,6 +20,7 @@ params {
 
 
     // output files
-    publish_trimmomatic_reads = false // publish intermediate files 
+    publish_trimmomatic_reads = false // publish intermediate reads 
+    publish_trf_reads = false // publish intermediate trf fastas and reads 
     publish_clean_reads = true
 }
