correct case mismatch in default report config

--- a/qc_mags/assets/report_config.json
+++ b/qc_mags/assets/report_config.json
@@ -13,6 +13,6 @@
   },
   "QUAST": {
     "id_column": "Assembly",
-    "keep_columns": ["N50", "# Contigs"]
+    "keep_columns": ["N50", "# contigs"]
   }
 }
