set defaults for run_... options

--- a/qc/qc.config
+++ b/qc/qc.config
@@ -4,7 +4,9 @@ includeConfig "../taxo_profile/taxo_profile.config"
 params {
     // -- scripts --//
     params.script_src_path="${projectDir}/assorted-sub-workflows/qc/bin/" 
-    
+    run_trimmomatic = true
+    run_trf = false
+    run_bmtagger = false
     if ((params.run_trimmomatic == false) && (params.run_trf == false) && (params.run_bmtagger == false)){
         skip_preprocessing = true
     }
