move preprocessing outside of qc

--- a/preprocessing/preprocessing.config
+++ b/preprocessing/preprocessing.config
@@ -18,9 +18,16 @@ params {
     bmtagger_host = "T2T-CHM13v2.0"
     publish_host_reads = false
 
-
     // output files
     publish_trimmomatic_reads = false // publish intermediate reads 
     publish_trf_reads = false // publish intermediate trf fastas and reads 
     publish_clean_reads = true
+    
+    // skip preprocessing if all steps are false
+    if ((params.run_trimmomatic == false) && (params.run_trf == false) && (params.run_bmtagger == false)){
+        skip_preprocessing = true
+    }
+    else {
+        skip_preprocessing = false
+    }
 }
