set default values and fix doc

--- a/preprocessing/preprocessing.config
+++ b/preprocessing/preprocessing.config
@@ -11,6 +11,7 @@ params {
     // -- TRF --//
     run_trf = false
     trf_cli_options= '2 7 7 80 10 50 500 -h -ngs' //"2 5 7 80 10 50 2000 -h -ngs"
+    publish_intermediate_trf = false
 
     // -- bmtagger --//
     run_bmtagger = false
