scriptsnot in right place

--- a/preprocessing/preprocessing.config
+++ b/preprocessing/preprocessing.config
@@ -24,6 +24,9 @@ params {
     publish_trf_reads = false // publish intermediate trf fastas and reads 
     publish_clean_reads = true
     
+    // -- scripts --//
+    params.script_src_path="${projectDir}/assorted-sub-workflows/qc/bin/" 
+    
     // skip preprocessing if all steps are false
     if ((params.run_trimmomatic == false) && (params.run_trf == false) && (params.run_bmtagger == false)){
         skip_preprocessing = true
