--- a/taxo_profile/taxo_profile.config
+++ b/taxo_profile/taxo_profile.config
@@ -7,6 +7,8 @@ params {
     save_sylph_sketches = false
     sketch_size = 31 // Only ksize 21 or 31 supported
     sylphtax_db_tag = "/data/pam/software/sylph-tax/v1/gtdb_r226_metadata.tsv"
+    sylph_estimate_unknown = true
+    sylph_read_seq_id = 99.5 //estimated percentage identity of your sequences (i.e. 100 - error percent). 99.5 is recommeded for Illumina reads.
     // Kraken2 parameters
     bracken_profile = false
     kraken2_db = "/data/pam/software/kraken2/standard/k2_standard_20250402"
