add beefeater methods

--- a/irods_extractor/subworkflows/irods.config
+++ b/irods_extractor/subworkflows/irods.config
@@ -21,13 +21,7 @@ env {
 }
 
 process {
-    // for IRODS_EXTRACTOR subworkflow
-    withName:RETRIEVE_CRAM {
-        executor = "lsf"
-        clusterOptions = "-R 'rusage[seqirods=100]'"
-    }
-
-    withName:RETRIEVE_FASTQ {
+    withName:BEEFEATER {
         executor = "lsf"
         clusterOptions = "-R 'rusage[seqirods=100]'"
     }
