--- a/irods_extractor/subworkflows/irods.config
+++ b/irods_extractor/subworkflows/irods.config
@@ -1,9 +1,12 @@
 params {
+    outdir= ""
+    manifest_of_lanes = ""
     save_metadata = true //on by default
     combine_same_id_crams = false // false by default i.e. treat each cram independently
     cleanup_intermediate_files_irods_extractor = false
     save_fastqs = false
-    save_method = "nested"
+    save_method = "flat"
+    search = false
     raw_reads_prefix = "raw_" // prepended to 'fastqs'
     preexisting_fastq_tag = "${raw_reads_prefix}fastqs"
     split_sep_for_ID_from_fastq = "_1.fastq"
