Clean up config defaults and remove legacy skip-download params
skip_downloaded.config:
- Remove pipeline-wide defaults (outdir, save_method, raw_reads_prefix)
- Make preexisting_output_tag depend explicitly on the global raw_reads_prefix
- Ensure skip logic only consumes global configuration rather than redefining it

irods.config:
- Remove global pipeline and skip-download parameters that do not belong
  to the iRODS extraction subworkflow
- Drop legacy FASTQ tagging parameters (preexisting_fastq_tag,
  split_sep_for_ID_from_fastq) that are no longer used anywhere in the codebase
- Retain only extraction- and metadata-specific parameters

preprocessing.config:
- Clarify the purpose of publish_clean_reads with an explicit comment

Overall, this refactor:
- Eliminates duplicated and conflicting defaults across configs
- Ensures raw FASTQ tagging is controlled at the pipeline/profile level
- Aligns configuration structure with actual subworkflow responsibilities

--- a/chaining_pipelines_tbd/subworkflows/skip_downloaded.config
+++ b/chaining_pipelines_tbd/subworkflows/skip_downloaded.config
@@ -1,12 +1,7 @@
 params {
-    save_method = "flat"
-    raw_reads_prefix = "raw_"
-    preexisting_output_tag = "${raw_reads_prefix}fastqs"
+    preexisting_output_tag = "${params.raw_reads_prefix}fastqs"
     existing_output_extension = ".gz"
     existing_output_id_suffix = "_1.fastq"
-    outdir = null
-    manifest_of_lanes = null
-    
 }
 
 
