--- a/preprocessing/preprocessing.config
+++ b/preprocessing/preprocessing.config
@@ -22,7 +22,7 @@ params {
     // output files
     publish_trimmomatic_reads = false // publish intermediate reads 
     publish_trf_reads = false // publish intermediate trf fastas and reads 
-    publish_clean_reads = true
+    publish_clean_reads = true // publish preprocessed fastqs into your outdir parameter
 
     // -- scripts --//
     script_src_path="${projectDir}/assorted-sub-workflows/preprocessing/bin/" 
