--- a/irods_extractor/subworkflows/irods.config
+++ b/irods_extractor/subworkflows/irods.config
@@ -1,12 +1,17 @@
 params {
-    lane_plex_sep = "#"
-    combine_same_id_crams = false // false by default i.e. treat each cram independently
-    irods_subset_to_skip = "phix"
     save_metadata = true //on by default
+    combine_same_id_crams = false // false by default i.e. treat each cram independently
     cleanup_intermediate_files_irods_extractor = false
+    save_fastqs = false
+    save_method = "nested"
+    raw_reads_prefix = "raw_" // prepended to 'fastqs'
+    preexisting_output_tag = "${raw_reads_prefix}fastqs"  //old name: preexisting_fastq_tag
+    existing_output_id_suffix = "_1.fastq"  // old name: split_sep_for_ID_from_fastq
     read_type = "Illumina"
     short_metacsv_name = false
+    lane_plex_sep = "#"
     large_data = false
+    irods_subset_to_skip = "phix"
 
 }
 
