--- a/irods_extractor/subworkflows/irods.config
+++ b/irods_extractor/subworkflows/irods.config
@@ -4,8 +4,7 @@ params {
     cleanup_intermediate_files_irods_extractor = false
     save_fastqs = false
     save_method = "nested"
-    raw_reads_prefix = "raw_" // prepended to 'fastqs'
-    preexisting_output_tag = "${raw_reads_prefix}fastqs"  //old name: preexisting_fastq_tag
+    preexisting_output_tag = "fastqs"  //old name: preexisting_fastq_tag
     existing_output_id_suffix = "_1.fastq"  // old name: split_sep_for_ID_from_fastq
     read_type = "Illumina"
     short_metacsv_name = false
