--- a/preprocessing/preprocessing.config
+++ b/preprocessing/preprocessing.config
@@ -1,4 +1,6 @@
 params {
+    raw_reads_prefix = "raw_" // prepended to 'fastqs'
+    preexisting_fastq_tag = "${raw_reads_prefix}fastqs"
 
     // -- trimmomatic --//
     run_trimmomatic = true
