--- a/pipeline_chaining/subworkflows/skip_downloaded.config
+++ b/pipeline_chaining/subworkflows/skip_downloaded.config
@@ -1,7 +1,7 @@
 params {
-    preexisting_output_tag = "${params.raw_reads_prefix}fastqs"
-    existing_output_extension = ".gz"
-    existing_output_id_suffix = "_1.fastq"
+    preexisting_output_tag = ""
+    existing_output_extension = ""
+    existing_output_id_suffix = ""
 }
 
 
