add generate_manifest.py files

--- a/mixed_input/mixed_input.config
+++ b/mixed_input/mixed_input.config
@@ -12,4 +12,6 @@ params {
     manifest_of_lanes = null
     manifest_of_reads = null
     manifest = null
+    fastq_validation = "strict"
+    depth = 0
 }
