incorporate manifest_from_dir into mixed_input.nf

--- a/mixed_input/mixed_input.config
+++ b/mixed_input/mixed_input.config
@@ -12,6 +12,7 @@ params {
     manifest_of_lanes = null
     manifest_of_reads = null
     manifest = null
+    manifest_from_dir = null
     fastq_validation = "strict"
     depth = 0
 }
