--- a/pipeline_chaining/subworkflows/skip_downloaded.config
+++ b/pipeline_chaining/subworkflows/skip_downloaded.config
@@ -2,7 +2,7 @@ params {
     preexisting_output_tag = ""
     existing_output_extension = ""
     existing_output_id_suffix = ""
+    only_new_input = false
+    
 }
-
-
 
