update irods_extractor/cram_extract subwf defaults to match new options

--- a/irods_extractor/subworkflows/irods.config
+++ b/irods_extractor/subworkflows/irods.config
@@ -5,8 +5,9 @@ params {
     save_fastqs = false
     save_method = "nested"
     raw_reads_prefix = "raw_" // prepend to 'fastqs'
-    preexisting_fastq_tag = "${raw_reads_prefix}fastqs"  
-    split_sep_for_ID_from_fastq = "_1.fastq"  
+    preexisting_output_tag = "${raw_reads_prefix}fastqs"  
+    existing_output_id_suffix = "_1.fastq" 
+    existing_output_extension = ".gz"
     read_type = "Illumina"
     short_metacsv_name = false
     lane_plex_sep = "#"
