--- a/ont_basecalling/ont_basecalling.config
+++ b/ont_basecalling/ont_basecalling.config
@@ -1,23 +1,6 @@
-// Config inheritance options
-params {
-    generic_config_base = "https://raw.githubusercontent.com/sanger-pathogens/nextflow-commons/"
-    generic_config_version = "master"
-    generic_config_url = ""
-}
-
-manifest {
-    name            = 'Nanopore Basecalling'
-    author          = 'PAM Informatics'
-    homePage        = 'https://gitlab.internal.sanger.ac.uk/sanger-pathogens/pipelines/assorted-sub-workflows'
-    description     = 'Subworkflow for basecalling from Nanopore reads'
-    mainScript      = 'basecalling.nf'
-    nextflowVersion = '>=21.04.0'
-    version         = 'v0.0.1'
-}
-
 params {
     // Basecalling
-    basecall_model = "sup"
+    model = "sup"
     //this is default anyways but allows for changing
     trim_adapters = "all"
     barcode_kit_name = null // pick within those listed in https://github.com/nanoporetech/dorado?tab=readme-ov-file#barcode-classification    
@@ -25,13 +8,9 @@ params {
     min_qscore = 9
     barcode_arrangement = null
     barcode_sequences = null
-
+    modified_bases_models = null
     raw_read_dir = ""
     additional_metadata = null
-
-    // LSF options
-    monochrome_logs = false
-
 }
 
 // to add to nextflow.commons
@@ -49,39 +28,5 @@ process {
             workflow.containerEngine == "singularity" ? '--containall --cleanenv --nv':
             ( workflow.containerEngine == "docker" ? '--gpus all': null )
         }
-    }
-}
-
-profiles {
-    standard {
-        inherit_generic_config()
-    }
-    docker {
-        inherit_generic_config()
-    }
-    singularity {
-        inherit_generic_config()
-    }
-    conda {
-        inherit_generic_config()
-    }
-    laptop {
-        includeConfig "./config/nextflow-commons/common.config"
-
-        docker.enabled = true
-        params.dorado_local_path = ""
-        params.basecall_model_path = ""
-    }
-}
-
-// Helper functions
-def inherit_generic_config() {
-    config_url = params.generic_config_url ? params.generic_config_url : "${params.generic_config_base}/${params.generic_config_version}/configs/nextflow.config"
-    try {
-        includeConfig "${config_url}"
-    } catch (Exception e) {
-        System.err.println("ERROR: Could not load generic config: ${config_url}")
-        System.err.println("Encountered the following exception:")
-        throw e
     }
 }
