push beefeater mixed input before restoring manifest generator code

--- a/mixed_input/mixed_input.config
+++ b/mixed_input/mixed_input.config
@@ -2,15 +2,12 @@ includeConfig "./subworkflows/ena_downloader.config"
 includeConfig "../irods_extractor/subworkflows/irods.config"
 
 params {
-    studyid = -1 // default value that should fail the iRODS query
-    runid = -1 // default value that should fail the iRODS query
-    laneid = -1 // default value that should fail the iRODS query
-    plexid = -1 // default value that should fail the iRODS query
+    studyid = null
+    runid = null
+    laneid = null
+    plexid = null
     manifest_ena = null
     manifest_of_lanes = null
     manifest_of_reads = null
     manifest = null
-    manifest_from_dir = null
-    fastq_validation = "strict"
-    max_depth = 0
 }
