--- a/mixed_input/mixed_input.config
+++ b/mixed_input/mixed_input.config
@@ -10,4 +10,7 @@ params {
     manifest_of_lanes = null
     manifest_of_reads = null
     manifest = null
+    manifest_from_dir = null
+    fastq_validation = "strict"
+    max_depth = 0
 }
