--- a/kraken2bracken/kraken2bracken.config
+++ b/kraken2bracken/kraken2bracken.config
@@ -16,6 +16,10 @@ process {
     withName:KRAKEN2 {
         cpus = { params.kraken2_threads }
         memory = { (params.memory_mapping == true ? "1.GB" : estimate_kraken_mem(params.kraken2_db, 1, task)) }
+        if (params.memory_mapping == true){
+            tmpspace = { estimate_kraken_mem(params.kraken2_db, 1, task) }
+            clusterOptions = "-R 'select[tmp>${tmpspace}]'"
+        }
     }
     withName:SEARCH_LIBRARY {
         cpus = { params.bracken_threads }
