--- a/kraken2bracken/kraken2bracken.config
+++ b/kraken2bracken/kraken2bracken.config
@@ -17,7 +17,7 @@ process {
         cpus = { params.kraken2_threads }
         memory = { (params.memory_mapping == true ? "1.GB" : estimate_kraken_mem(params.kraken2_db, 1, task)) }
         if (params.memory_mapping == true){
-            clusterOptions = "-R 'select[tmp>${ estimate_kraken_mem(params.kraken2_db, 1, task) }]'"
+            clusterOptions = "-R 'select[tmp>" + estimate_kraken_mem(params.kraken2_db, 1, task) as String + "]'"
         }
     }
     withName:SEARCH_LIBRARY {
