Update path to bakta database

--- a/annotate_bakta/annotate_bakta.config
+++ b/annotate_bakta/annotate_bakta.config
@@ -1,6 +1,6 @@
 params {
     bakta_args = ""
-    bakta_db = "/data/pam/software/bakta/v6.0/"
+    bakta_db = "/data/pam/software/bakta/v6.0_amrfinder_2026_01_21.1"
     combine_annotations = false
     publish_gbff = false
 }
