debug request tmp storage space

--- a/kraken2bracken/kraken2bracken.config
+++ b/kraken2bracken/kraken2bracken.config
@@ -17,7 +17,9 @@ process {
         cpus = { params.kraken2_threads }
         memory = { (params.memory_mapping == true ? "1.GB" : estimate_kraken_mem(params.kraken2_db, 1, task)) }
         if (params.memory_mapping == true){
-            clusterOptions = "-R 'select[tmp>" + estimate_kraken_mem(params.kraken2_db, 1, task) as String + "]'"
+            clusterOptions = {
+                "-R 'select[tmp>" + estimate_kraken_mem(params.kraken2_db, 1, task) as String + "]'"
+            }
         }
     }
     withName:SEARCH_LIBRARY {
@@ -34,6 +36,7 @@ process {
 Estimates required memory from kraken2 database files, accepts a memory top_up (in GB) to provide head room.
 top_up will be increased linearly with each task attempt up to params.max_memory
 */
+
 def estimate_kraken_mem(db, top_up, task) {
     float attempt = task.attempt
     float top_up_float = top_up
