Halve the temp memory requested for Kraken

--- a/kraken2bracken/kraken2bracken.config
+++ b/kraken2bracken/kraken2bracken.config
@@ -35,14 +35,15 @@ process {
 /*
 Estimates required memory from kraken2 database files, accepts a memory top_up (in GB) to provide head room.
 top_up will be increased linearly with each task attempt up to params.max_memory
+For testing we are requesting half of the space required for the database
 */
 
 def estimate_kraken_mem(db, top_up, task) {
     float attempt = task.attempt
-    float top_up_float = top_up
+    float top_up_float = top_up 
     def mem_file = new File("${db}/hash.k2d").size()
     def mem_top_up = (top_up_float * 1024**3) * attempt
-    def mem_bytes = mem_file + mem_top_up
+    def mem_bytes = (mem_file / 2) + mem_top_up
     def mem_mb = mem_bytes / (1024**2)
     def valid_mem = "${mem_mb.round()}.MB"
     if (valid_mem.compareTo(params.max_memory as nextflow.util.MemoryUnit) == 1) {
