--- a/kraken2bracken/kraken2bracken.config
+++ b/kraken2bracken/kraken2bracken.config
@@ -18,7 +18,7 @@ process {
         memory = { (params.memory_mapping == true ? "1.GB" : estimate_kraken_mem(params.kraken2_db, 1, task)) }
         if (params.memory_mapping == true){
             clusterOptions = {
-                "-R 'select[tmp>" + estimate_kraken_mem(params.kraken2_db, 1, task) as String + "]'"
+                "-R 'select[tmp>" + estimate_kraken_tmp(params.kraken2_db, 1, task) as String + "]'"
             }
         }
     }
@@ -35,7 +35,6 @@ process {
 /*
 Estimates required memory from kraken2 database files, accepts a memory top_up (in GB) to provide head room.
 top_up will be increased linearly with each task attempt up to params.max_memory
-For testing we are requesting half of the space required for the database
 */
 
 def estimate_kraken_mem(db, top_up, task) {
@@ -43,7 +42,25 @@ def estimate_kraken_mem(db, top_up, task) {
     float top_up_float = top_up 
     def mem_file = new File("${db}/hash.k2d").size()
     def mem_top_up = (top_up_float * 1024**3) * attempt
-    def mem_bytes = (mem_file / 2) + mem_top_up
+    def mem_bytes = mem_file + mem_top_up
+    def mem_mb = mem_bytes / (1024**2)
+    def valid_mem = "${mem_mb.round()}.MB"
+    if (valid_mem.compareTo(params.max_memory as nextflow.util.MemoryUnit) == 1) {
+        return params.max_memory as nextflow.util.MemoryUnit
+    }
+    return valid_mem
+}
+
+/*
+Similar function but aimed to estimate TMP space to request when using Kraken2's memory mapping option and the process scratch directive.
+Investigations show that only a chunk of the database is loaded on disk at a time, meaning only a fraction of space equivalent to the size of the hash.k2d file is required. 
+*/
+def estimate_kraken_tmp(db, top_up, task, chunkfraction = 0.25) {
+    float attempt = task.attempt
+    float top_up_float = top_up 
+    def mem_file = new File("${db}/hash.k2d").size()
+    def mem_top_up = (top_up_float * 1024**3) * attempt
+    def mem_bytes = (mem_file * chunkfraction) + mem_top_up
     def mem_mb = mem_bytes / (1024**2)
     def valid_mem = "${mem_mb.round()}.MB"
     if (valid_mem.compareTo(params.max_memory as nextflow.util.MemoryUnit) == 1) {
