--- a/kraken2bracken/kraken2bracken.config
+++ b/kraken2bracken/kraken2bracken.config
@@ -34,22 +34,32 @@ process {
 }
 
 /*
-Estimates required memory from kraken2 database files, accepts a memory top_up (in GB) to provide head room.
+Estimates required memory/disk space for loading kraken2 database files, with an optional top_up space argument (in GB) to provide head room.
 top_up will be increased linearly with each task attempt up to params.max_memory
 */
-
-def estimate_kraken_mem(db, top_up, task) {
+def estimate_kraken_db_loading_space(db, top_up, task, chunkfraction = 1) {
     float attempt = task.attempt
     float top_up_float = top_up 
-    def mem_file = new File("${db}/hash.k2d").size()
-    def mem_top_up = (top_up_float * 1024**3) * attempt
-    def mem_bytes = mem_file + mem_top_up
-    def mem_mb = mem_bytes / (1024**2)
-    def valid_mem = "${mem_mb.round()}.MB"
-    if (valid_mem.compareTo(params.max_memory as nextflow.util.MemoryUnit) == 1) {
+    def file_size = new File("${db}/hash.k2d").size()
+    def space_top_up = (top_up_float * 1024**3) * attempt
+    def space_to_request_bytes = (file_size * chunkfraction) + space_top_up
+    def space_to_request_mb = space_to_request_bytes / (1024**2)
+    def valid_space = "${space_to_request_mb.round()}.MB"
+    return valid_space
+}
+
+/*
+Wrapper function aimed at estimating memory to request when using Kraken2's default behaviour of loading the entire database into memory. 
+This is likely an overestimation of the actual memory required, but provides a safe upper bound for memory requirements when not using memory mapping.
+*/
+def estimate_kraken_mem(db, top_up, task) {
+    valid_space = estimate_kraken_db_loading_space(db, top_up, task)
+    if (valid_space.compareTo(params.max_memory as nextflow.util.MemoryUnit) == 1) {
         return params.max_memory as nextflow.util.MemoryUnit
     }
-    return valid_mem
+    else {
+        return valid_space
+    }
 }
 
 /*
@@ -57,15 +67,5 @@ Similar function but aimed to estimate TMP space to request when using Kraken2's
 Investigations show that only a chunk of the database is loaded on disk at a time, meaning only a fraction of space equivalent to the size of the hash.k2d file is required. 
 */
 def estimate_kraken_tmp(db, top_up, task, chunkfraction = 0.25) {
-    float attempt = task.attempt
-    float top_up_float = top_up 
-    def mem_file = new File("${db}/hash.k2d").size()
-    def mem_top_up = (top_up_float * 1024**3) * attempt
-    def mem_bytes = (mem_file * chunkfraction) + mem_top_up
-    def mem_mb = mem_bytes / (1024**2)
-    def valid_mem = "${mem_mb.round()}.MB"
-    if (valid_mem.compareTo(params.max_memory as nextflow.util.MemoryUnit) == 1) {
-        return params.max_memory as nextflow.util.MemoryUnit
-    }
-    return valid_mem
+    return estimate_kraken_db_loading_space(db, top_up, task, chunkfraction)
 }
