Use false instead of null

--- a/mags_maker/binning/binning.config
+++ b/mags_maker/binning/binning.config
@@ -4,6 +4,6 @@ params {
     concoct_min_contig = 1000
     metabat_min_contig = 1500
     maxbin_markers = 140
-    metabat1 = null
+    metabat1 = false
     keep_unbinned = false
 }
