remove broken function refactor for testing

--- a/kraken2bracken/kraken2bracken.config
+++ b/kraken2bracken/kraken2bracken.config
@@ -16,12 +16,12 @@ process {
     withName: 'KRAKEN2.*' {
         cpus = { params.kraken2_threads }
         memory = { (params.memory_mapping == true ? "1.GB" : estimate_kraken_mem(params.kraken2_db, 1, task)) }
-        if (params.memory_mapping == true){
+        /*if (params.memory_mapping == true){
             scratch = true
             clusterOptions = {
                 "-R 'select[tmp>" + estimate_kraken_tmp(params.kraken2_db, 1, task, 0.2) as String + "]'"
             }
-        }
+        }*/
     }
     withName:SEARCH_LIBRARY {
         cpus = { params.bracken_threads }
@@ -37,7 +37,22 @@ process {
 Estimates required memory/disk space for loading kraken2 database files, with an optional top_up space argument (in GB) to provide head room.
 top_up will be increased linearly with each task attempt up to params.max_memory
 */
-def estimate_kraken_db_loading_space(db, top_up, task, chunkfraction) {
+// def estimate_kraken_db_loading_space(db, top_up, task, chunkfraction) {
+//     float attempt = task.attempt
+//     float top_up_float = top_up 
+//     def file_size = new File("${db}/hash.k2d").size()
+//     def space_top_up = (top_up_float * 1024**3) * attempt
+//     def space_to_request_bytes = (file_size * chunkfraction) + space_top_up
+//     def space_to_request_mb = space_to_request_bytes / (1024**2)
+//     def valid_space = "${space_to_request_mb.round()}.MB"
+//     return valid_space
+// }
+
+/*
+Wrapper function aimed at estimating memory to request when using Kraken2's default behaviour of loading the entire database into memory. 
+This is likely an overestimation of the actual memory required, but provides a safe upper bound for memory requirements when not using memory mapping.
+*/
+def estimate_kraken_mem(db, top_up, task) {
     float attempt = task.attempt
     float top_up_float = top_up 
     def file_size = new File("${db}/hash.k2d").size()
@@ -45,15 +60,6 @@ def estimate_kraken_db_loading_space(db, top_up, task, chunkfraction) {
     def space_to_request_bytes = (file_size * chunkfraction) + space_top_up
     def space_to_request_mb = space_to_request_bytes / (1024**2)
     def valid_space = "${space_to_request_mb.round()}.MB"
-    return valid_space
-}
-
-/*
-Wrapper function aimed at estimating memory to request when using Kraken2's default behaviour of loading the entire database into memory. 
-This is likely an overestimation of the actual memory required, but provides a safe upper bound for memory requirements when not using memory mapping.
-*/
-def estimate_kraken_mem(db, top_up, task) {
-    valid_space = estimate_kraken_db_loading_space(db, top_up, task, 1.0) // use chunkfraction of 1 to estimate space required to load entire db into memory
     if (valid_space.compareTo(params.max_memory as nextflow.util.MemoryUnit) == 1) {
         return params.max_memory as nextflow.util.MemoryUnit
     }
@@ -66,6 +72,6 @@ def estimate_kraken_mem(db, top_up, task) {
 Similar function but aimed to estimate TMP space to request when using Kraken2's memory mapping option and the process scratch directive.
 Investigations show that only a chunk of the database is loaded on disk at a time, meaning only a fraction of space equivalent to the size of the hash.k2d file is required. 
 */
-def estimate_kraken_tmp(db, top_up, task, chunkfraction = 0.2) {
-    return estimate_kraken_db_loading_space(db, top_up, task, chunkfraction)
-}
+// def estimate_kraken_tmp(db, top_up, task, chunkfraction = 0.2) {
+//     return estimate_kraken_db_loading_space(db, top_up, task, chunkfraction)
+// }
