--- a/kraken2bracken/kraken2bracken.config
+++ b/kraken2bracken/kraken2bracken.config
@@ -16,12 +16,12 @@ process {
     withName: 'KRAKEN2.*' {
         cpus = { params.kraken2_threads }
         memory = { (params.memory_mapping == true ? "1.GB" : estimate_kraken_mem(params.kraken2_db, 1, task)) }
-        /*if (params.memory_mapping == true){
+        if (params.memory_mapping == true){
             scratch = true
-            clusterOptions = {
+            /*clusterOptions = {
                 "-R 'select[tmp>" + estimate_kraken_tmp(params.kraken2_db, 1, task, 0.2) as String + "]'"
-            }
-        }*/
+            }*/
+        }
     }
     withName:SEARCH_LIBRARY {
         cpus = { params.bracken_threads }
