strict process withName matching

--- a/kraken2bracken/kraken2bracken.config
+++ b/kraken2bracken/kraken2bracken.config
@@ -13,7 +13,7 @@ params {
 }
 
 process {
-    withName: 'KRAKEN2.*' {
+    withName:KRAKEN2 {
         cpus = { params.kraken2_threads }
         memory = { (params.memory_mapping == true ? "1.GB" : estimate_kraken_mem(params.kraken2_db, 1, task)) }
         if (params.memory_mapping == true){
