deactivate publishing of full report by default and always gzip it

--- a/kraken2bracken/kraken2bracken.config
+++ b/kraken2bracken/kraken2bracken.config
@@ -10,15 +10,17 @@ params {
     threshold = 10  // minimum number of reads required for a classification at the specified rank
     get_classified_reads = false
     enable_building = false
+    publish_full_kraken_report = false
 }
 
 process {
     withName:KRAKEN2 {
         cpus = { params.kraken2_threads }
         memory = { (params.memory_mapping == true ? "1.GB" : estimate_kraken_mem(params.kraken2_db, 1, task)) }
-        if (params.memory_mapping == true){
-            scratch = true
-        }
+    }
+    withName:KRAKEN2_GET_CLASSIFIED {
+        cpus = { params.kraken2_threads }
+        memory = { (params.memory_mapping == true ? "1.GB" : estimate_kraken_mem(params.kraken2_db, 1, task)) }
     }
     withName:SEARCH_LIBRARY {
         cpus = { params.bracken_threads }
