add the request of seqirods tokens for the BATON query. step

--- a/irods_extractor/subworkflows/irods.config
+++ b/irods_extractor/subworkflows/irods.config
@@ -31,4 +31,9 @@ process {
         executor = "lsf"
         clusterOptions = "-R 'rusage[seqirods=100]'"
     }
+
+    withName:BATON {
+        executor = "lsf"
+        clusterOptions = "-R 'rusage[seqirods=100]'"
+    }
 }
