put back useful comment

--- a/kraken2bracken/kraken2bracken.config
+++ b/kraken2bracken/kraken2bracken.config
@@ -32,6 +32,10 @@ process {
     }
 }
 
+/*
+Estimates required memory from kraken2 database files, accepts a memory top_up (in GB) to provide head room.
+top_up will be increased linearly with each task attempt up to params.max_memory
+*/
 def estimate_kraken_mem(db, top_up, task) {
     float attempt = task.attempt
     float top_up_float = top_up 
